--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "lodash.shuffle": "^4.2.0",
     "vue": "^3.2.29",
     "vue-router": "4"
   },
